// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux, game passes e2e test: Add players and set rounds 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 1,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [],
  "status": "UNINITIALIZED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Finished round 1 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Finished round 2, game ended 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p2",
    "p1",
  ],
  "rounds": Object {
    "current": 3,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [
      Object {
        "dist": -1,
        "name": "p2",
        "round": 2,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p1",
        "round": 2,
        "score": 0,
        "selected": null,
      },
    ],
  ],
  "status": "FINISHED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Game initialized 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 1,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [
    Array [],
    Array [],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 1, player 1 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p2",
    "p1",
  ],
  "rounds": Object {
    "current": 1,
    "progress": 1,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 1, player 2 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 1,
    "progress": 2,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [],
  ],
  "status": "ROUND_ENDED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, player 1 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p2",
    "p1",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 1,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 2,
        "score": 0,
        "selected": null,
      },
    ],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, player 1 scored 2`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 1,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [
      Object {
        "dist": -1,
        "name": "p2",
        "round": 2,
        "score": 0,
        "selected": null,
      },
    ],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, player 2 scored 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p2",
    "p1",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 2,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [
      Object {
        "dist": -1,
        "name": "p2",
        "round": 2,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p1",
        "round": 2,
        "score": 0,
        "selected": null,
      },
    ],
  ],
  "status": "ROUND_ENDED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Round 2, reset 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p2",
    "p1",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Started round 1 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 1,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [
    Array [],
    Array [],
  ],
  "status": "ROUND_STARTED",
  "timeLimit": 60,
}
`;

exports[`Redux, game passes e2e test: Started round 2 1`] = `
Object {
  "mapId": "1mSRVyWP3tLQ",
  "mapName": "Custom map",
  "players": Array [
    "p1",
    "p2",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 2,
  },
  "scores": Array [
    Array [
      Object {
        "dist": -1,
        "name": "p1",
        "round": 1,
        "score": 0,
        "selected": null,
      },
      Object {
        "dist": -1,
        "name": "p2",
        "round": 1,
        "score": 0,
        "selected": null,
      },
    ],
    Array [],
  ],
  "status": "ROUND_STARTED",
  "timeLimit": 60,
}
`;
